---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"edit\"])"
---
Edit code by symbol name. Use for batch renames, signature changes, or pattern-based rewrites.

Usage: normalize edit [OPTIONS] [COMMAND]

Commands:
  delete              Delete a symbol.
  replace             Replace a symbol with new content.
  swap                Swap two symbols
  insert              Insert content relative to a symbol.
  rename              Rename a symbol across its definition, call sites, and import statements.
  undo                Undo the last N edits
  redo                Redo the last undone edit
  goto                Jump to a specific shadow commit
  batch               Apply batch edits from JSON file
  move                Move a symbol's definition to another file and rewrite import sites.
  introduce-variable  Extract an expression into a named variable binding.
  inline-variable     Inline a variable: replace all uses with the initializer and remove the binding.
  add-parameter       Add a parameter to a function signature and update all call sites.
  inline-function     Inline a single-use function at its call site.
  history             View shadow git edit history
  help                Print this message or the help of the given subcommand(s)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
